# pyxpp

./: .gitignore  README.md  demo.ipynb  ml.ode  notes.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test.ode  xppaut
.github/workflows/: flake8.yml  main.yml  pytest.yml
pyxpp/: __init__.py  generator.py  lexer.py  model.py  parser.py  pyxpp.py  xpp.py
src/pyxpp/: lexer.py  parser.py  pyxpp.py
tests/: _test_parse.py  odd_examples_to_test.md  test_generator.py  test_lexer.py  test_parser.py  test_xpp.py
tests/fixtures/: ml.ode  nnet1.ode
xply/: generator.py  lexer.py  parser.py  xply.py
