[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_third_party = []

[tool.poetry]
name = "pyxpp"
version = "0.1.0"
description = "An XPP Python wrapper powered by PLY"
authors = ["Mark Olenik <mark.olenik@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8.6"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
