[tool]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
known_third_party = []

[dependencies]
numpy = {}
ply = {}

[dev-dependencies]
black = { version = ">=21.12b0"}
mypy = { version = ">=0.931" }
flake8 = { version = ">=4.0.1" }
jupyter_console = { version = "==6.4.0"}
jupyter_client = { version = "==6.1.12" }
matplotlib = {}


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
