[metadata]
name = pyxpp
version = 0.1.0
author = Mark Olenik
author_email = mark.olenik@gmail.com
description = An XPP/XPPAUT Python wrapper powered by PLY.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/markolenik/pyxpp
project_urls =
    Bug Tracker = https://github.com/markolenik/pyxpp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.6

[options.packages.find]
where = src
