[metadata]
name = pyxpp
version = 0.1.0
author = Mark Olenik
author_email = mark.olenik@gmail.com
description = An XPP/XPPAUT Python wrapper powered by PLY.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/markolenik/pyxpp
project_urls =
    Bug Tracker = https://github.com/markolenik/pyxpp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.6
install_requires =
    numpy
    ply

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
dev =
    black
    mypy
    flake8
    pyright

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.4
package = my_project
extensions =
    markdown
